# copeland-ledger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/copeland_ledger/: amortization.py  config.py  models.py
src/copeland_ledger/importers/: pdf_archive.py  qfx.py
src/copeland_ledger/qfx/: extract.py  load.py  transform.py
src/copeland_ledger/scripts/: beangulp_importer.py  beanpod.py
tests/: test_amortization.py  test_config.py
tests/pdf/: test_pdf_archive.py
tests/qfx/: test_extract.py
