[project]
name = "copeland_ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "beancount",
    "beanquery",
    "click",
    "fava",
    "keyring",
    "ofxtools @ git+https://github.com/csingley/ofxtools@master",
    "pydantic",
    "rich",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ruff",
]

[project.scripts]
beangulp-import = "copeland_ledger.scripts.beangulp_importer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.wheel.packages = ["src/copeland_ledger"]
metadata.allow-direct-references = true

[tool.ruff]
line-length = 100
