[project]
name = "copeland_ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "beancount",
    "beanprice @ git+https://github.com/beancount/beanprice.git@master",
    "beanquery",
    "click",
    "fava",
    "keyring",
    "numpy-financial",
    "ofxtools @ git+https://github.com/csingley/ofxtools@master",
    "pandas",
    "pydantic",
    "rich",
    "structlog",
]

[project.optional-dependencies]
dev = ["jupyterlab", "pytest", "pytest-cov", "ruff"]

[project.scripts]
beangulp-import = "copeland_ledger.scripts.beangulp_importer:main"
bean-pod = "copeland_ledger.scripts.beanpod:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.wheel.packages = ["src/copeland_ledger"]
metadata.allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
testpaths = ["tests"]
norecursedirs = [".direnv", ".git"]
