[project]
name = "copeland_ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.9,<3.14"
dependencies = [
    "beancount",
    "beanprice @ git+https://github.com/beancount/beanprice.git@master",
    "beanquery",
    "click",
    "fava",
    "fava-investor",
    "keyring",
    "numpy-financial",
    "ofxtools @ git+https://github.com/csingley/ofxtools@master",
    "pandas",
    "pydantic",
    "pypdf",
    "rich",
    "structlog",
]

[dependency-groups]
dev = ["jupyterlab", "pre-commit", "pytest", "pytest-cov", "ruff"]

[project.scripts]
beangulp-import = "copeland_ledger.scripts.beangulp_importer:main"
bean-pod = "copeland_ledger.scripts.beanpod:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.wheel.packages = ["src/copeland_ledger"]
metadata.allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
